Added the solution for step 2